# geo_git

./: Cargo.toml  README.md
src/: lexer.rs  lib.rs  parser.rs  public.rs
src/db/: impl.rs  mod.rs
src/db/version_controller/: impl.rs  mod.rs
src/geo/: color.rs  criticality.rs  line.rs  mod.rs  point.rs  rect.rs  shape.rs  vector.rs
src/gui/: public.rs
src/parser/: action.rs  commit.rs  impl.rs  mod.rs  rect.rs  tokens.rs
test/: cursor.txt  formal.txt  squeeze.txt
